add method security